--- a/main.html
+++ b/main.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
-    <span>기계의 선택: </span>
-    <span class="a"></span>
-    <span class="b"></span>
-    <span class="c"></span>
-    <span class="d"></span>
-    <span class="e"></span>
-    <span class="f"></span><br>
-    <button class="extract-btn">추첨</button><br>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
     <div>
-        <span>User의 선택:</span>
-        <input class="user_choice" type="text">
+      <span>기계의 선택: </span>
+      <span class="a"></span>
+      <span class="b"></span>
+      <span class="c"></span>
+      <span class="d"></span>
+      <span class="e"></span>
+      <span class="f"></span><br />
+      <button class="extract-btn">추첨</button><br />
     </div>
-   
-    
-</body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<script src="main.js"></script>
+
+    <div>
+      <span>User의 선택:</span>
+      <input class="user_choice" type="text" />
+    </div>
+    <span>메시지:<p class="status_msg"></p></span>
+    <span>맞춘갯수:<p class="correct_count"></p></span>
+  </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="main.js"></script>
 </html>
