--- a/main.html
+++ b/main.html
@@ -29,7 +29,8 @@
       <input class="user_choice" type="text" />
     </div>
     <span>메시지:<p class="status_msg"></p></span>
-    <span>맞춘갯수:<p class="correct_count"></p></span>
+    <span>맞춘갯수:<span class="correct_count"></span></span><br>
+    <span>등수:<span class="rank"></span></span>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="main.js"></script>
