--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <header>로또 추첨게임!</header>
+    <header>로또 시뮬레이션</header>
     <div class="machine">
       <span class="machine_title">기계의 선택</span><br />
       <div>
@@ -33,10 +33,9 @@
     </div>
     <div class="status">
       <p class="status_msg"></p>
-      <span>맞춘갯수</span>
-      <span class="correct_count"></span>
-      <span>등수</span>
-      <span class="rank"></span>
+      <span>맞춘갯수:   <span class="correct_count"></span></span>
+      <span>등수:  <span class="rank"></span></span>
+      <span>당첨확률(%):<span  class="percent"></span></span>
     </div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
