--- a/main.html
+++ b/main.html
@@ -37,7 +37,11 @@
       <span>등수:  <span class="rank"></span></span>
       <span>당첨확률(%):<span  class="percent"></span></span>
     </div>
+    <div id="container"></div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="main.js"></script>
+  <script src="https://code.highcharts.com/highcharts.js"></script>
+  <script src="https://code.highcharts.com/modules/exporting.js"></script>
+  <script src="https://code.highcharts.com/modules/accessibility.js"></script>
 </html>
